--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
    </head>
-   <body class="link-body " style="background-image: linear-gradient(135deg, #A8EDEA 10%, #FED6E3 100%);">
+   <body class="link-body " style="background-image: linear-gradient(45deg, #a8edea 0%, #fed6e3 100%);">
       <div class="container animate__animated animate__fadeIn">
          <div class="row d-flex justify-content-center text-center">
             <div class="col-md-8 link-content ">
